K1J-511: Update to java 21, gradle 8.10.2, Spring Framework 6.1, remove gradle-intyg-plugin (#177)
Co-authored-by: Mikael Heglind <mikael.heglind@soprasteria.com>
Co-authored-by: Mikaela Romild <mikaela.romild@soprasteria.com>